feat: Implement GNB

--- a/index.html
+++ b/index.html
@@ -26,10 +26,32 @@
                     <i class="fas fa-bars ms-1"></i>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
+                    <ul class="navbar-nav text-uppercase py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#services">일정 소개</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">발표 자료</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">NFT</a></li>
+                    </ul>
+                </div>
+                <div class="d-none d-sm-none d-md-none d-lg-block">
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <i onclick="location.href='http://www.instagram.com/decipher_snu';" class="fa fab fa-instagram"></i>
+                        </li>
+                        <li class="nav-item">
+                            <i onclick="location.href='http://www.facebook.com/decipher.ac';" class="fa fab fa-facebook"></i>
+                        </li>
+                        <li class="nav-item">
+                            <i onclick="location.href='https://twitter.com/DecipherGlobal';" class="fa fab fa-twitter"></i>
+                        </li>
+                        <li class="nav-item">
+                            <i onclick="location.href='http://www.medium.com/decipher-media';" class="fa fab fa-medium"></i>
+                        </li>
+                        <li class="nav-item">
+                            <i onclick="location.href='https://www.youtube.com/channel/UCfKTPDjUvDsMuczqr8xaG4Q';" class="fa fab fa-youtube"></i>
+                        </li>
+                        <li class="nav-item">
+                            <i onclick="location.href='https://www.linkedin.com/company/decipher-ac/';" class="fa fab fa-linkedin"></i>
+                        </li>
                     </ul>
                 </div>
             </div>
