feat: 연사소개 섹션 구현

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase py-4 py-lg-0">
                         <li class="nav-item"><a class="nav-link" href="#timetable">일정 소개</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#portfolio">연사 소개</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#speaker">연사 소개</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">NFT</a></li>
                     </ul>
                 </div>
@@ -247,127 +247,110 @@
             </div>
         </div>
         <!-- Portfolio Grid-->
-        <section class="page-section bg-light" id="portfolio">
+        <section class="page-section bg-light" id="speaker">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <span class="section-title"><div class="upper-box"></div>연사 소개</span>
                 </div>
-                <div class="row text-center">
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-shopping-cart fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">E-Commerce</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                
+                <div class="text-center">
+                    <span class="section-sub-title">Keynote Speech</span>
+                </div>
+                <div class="horizontal-line"></div>
+                <div class="row profile-container">
+                    <div class="profile">
+                        <img class="profile-img" src="assets/img/profile/1.png" />
+                        <div class="profile-text">
+                            <h2>박광성</h2>
+                            <h3>a41</h3>
+                            <p>Partner</p>
+                        </div>
                     </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Responsive Design</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <div class="profile">
+                        <img class="profile-img" src="assets/img/profile/2.png" />
+                        <div class="profile-text">
+                            <h2>김성호</h2>
+                            <h3>hashed</h3>
+                            <p>Co-founder</p>
+                        </div>
                     </div>
-                    <div class="col-md-4">
-                        <span class="fa-stack fa-4x">
-                            <i class="fas fa-circle fa-stack-2x text-primary"></i>
-                            <i class="fas fa-lock fa-stack-1x fa-inverse"></i>
-                        </span>
-                        <h4 class="my-3">Web Security</h4>
-                        <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <div class="profile">
+                        <img class="profile-img" src="assets/img/profile/3.png" />
+                        <div class="profile-text">
+                            <h2>김재윤</h2>
+                            <h3>Superblock</h3>
+                            <p>CEO</p>
+                        </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 1-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal1">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/1.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Threads</div>
-                                <div class="portfolio-caption-subheading text-muted">Illustration</div>
-                            </div>
+
+                <div class="text-center">
+                    <span class="section-sub-title">Discussion Panel</span>
+                </div>
+                <div class="horizontal-line"></div>
+                <div class="row profile-container">
+                    <div class="discussion-profile">
+                        <img class="profile-img" src="assets/img/profile/4.png" />
+                        <div class="profile-text">
+                            <h2>이영인</h2>
+                            <h3>Chainlink</h3>
+                            <p>Evangelist at APAC</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 2-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal2">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/2.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Explore</div>
-                                <div class="portfolio-caption-subheading text-muted">Graphic Design</div>
-                            </div>
+                    <div class="discussion-profile">
+                        <img class="profile-img" src="assets/img/profile/5.png" />
+                        <div class="profile-text">
+                            <h2>정인선</h2>
+                            <h3>Coindesk Korea</h3>
+                            <p>Reporter at Coindesk Korea</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4">
-                        <!-- Portfolio item 3-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal3">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/3.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Finish</div>
-                                <div class="portfolio-caption-subheading text-muted">Identity</div>
-                            </div>
+                    <div class="discussion-profile">
+                        <img class="profile-img" src="assets/img/profile/6.png" />
+                        <div class="profile-text">
+                            <h2>박상현</h2>
+                            <h3>CURG</h3>
+                            <p>President</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
-                        <!-- Portfolio item 4-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal4">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/4.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Lines</div>
-                                <div class="portfolio-caption-subheading text-muted">Branding</div>
-                            </div>
+                    <div class="discussion-profile">
+                        <img class="profile-img" src="assets/img/profile/7.png" />
+                        <div class="profile-text">
+                            <h2>전정호</h2>
+                            <h3>DSRV</h3>
+                            <p>Co-founder</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6 mb-4 mb-sm-0">
-                        <!-- Portfolio item 5-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal5">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/5.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Southwest</div>
-                                <div class="portfolio-caption-subheading text-muted">Website Design</div>
-                            </div>
+                    <div class="discussion-profile">
+                        <img class="profile-img" src="assets/img/profile/8.png" />
+                        <div class="profile-text">
+                            <h2>김정현</h2>
+                            <h3>Krust</h3>
+                            <p>Lead of Krust Universe Klaytn Group R&D Team</p>
                         </div>
                     </div>
-                    <div class="col-lg-4 col-sm-6">
-                        <!-- Portfolio item 6-->
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-bs-toggle="modal" href="#portfolioModal6">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/6.jpg" alt="..." />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
-                            </div>
+                    <div class="discussion-profile">
+                        <img class="profile-img" src="assets/img/profile/9.png" />
+                        <div class="profile-text">
+                            <h2>김성진</h2>
+                            <h3>Onther</h3>
+                            <p>Core unit leader</p>
+                        </div>
+                    </div>
+                    <div class="discussion-profile">
+                        <img class="profile-img" src="assets/img/profile/10.png" />
+                        <div class="profile-text">
+                            <h2>김동민</h2>
+                            <h3>Wemade</h3>
+                            <p>Business Director</p>
+                        </div>
+                    </div>
+                    <div class="discussion-profile">
+                        <img class="profile-img" src="assets/img/profile/11.png" />
+                        <div class="profile-text">
+                            <h2>박찬<h2>
+                            <h3>Superblock</h3>
+                            <p>CTO</p>
                         </div>
                     </div>
                 </div>
