feat: sponsored 섹션 구현

--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         
             </div>
         </div>
-        <!-- Portfolio Grid-->
+        <!-- Speaker Grid-->
         <section class="page-section bg-light" id="speaker">
             <div class="container">
                 <div class="text-center">
@@ -354,6 +354,38 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+        <section class="page-section" id="sponsered">
+            <div class="container">
+                <div class="text-center">
+                    <span class="section-title"><div class="upper-box"></div>SPONSORED</span>
+                </div>
+
+                <div class="text-center">
+                    <span class="section-sub-title">Main</span>
+                </div>
+                <div class="horizontal-line"></div>
+                <div class="row sponsor-container">
+                    <img class="sponsor-main-logo" src="assets/img/sponsor_main/a41.png" />
+                    <img class="sponsor-main-logo" src="assets/img/sponsor_main/hashed.png" />
+                    <img class="sponsor-main-logo" src="assets/img/sponsor_main/superblock.png" />
+                </div>
+
+                <div class="text-center">
+                    <span class="section-sub-title">Partner</span>
+                </div>
+                <div class="horizontal-line"></div>
+                <div class="row sponsor-container">
+                    <img class="sponsor-logo" src="assets/img/sponsor/krust.png" />
+                    <img class="sponsor-logo" src="assets/img/sponsor/dsrv.png" />
+                    <img class="sponsor-logo" src="assets/img/sponsor/haechilabs.png" />
+                    <img class="sponsor-logo" src="assets/img/sponsor/wemix.png" />
+                    <img class="sponsor-logo" src="assets/img/sponsor/onther.png" />
+                    <img class="sponsor-logo" src="assets/img/sponsor/dreamplus.png" />
+                    <img class="sponsor-logo" src="assets/img/sponsor/dcent.png" />
+                </div>
+
             </div>
         </section>
         <!-- About-->
