feat: add google form link

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             <div class="container">
                 <div class="header-tickers"></div>
                 <div class="header-buttons">
-                    <button class="external-link-button white-filled-button">게더타운 사전지원</button>
+                    <button class="external-link-button white-filled-button" onclick="location.href='https://forms.gle/jbULfA2pPecetCnj7';">게더타운 사전지원</button>
                     <button class="external-link-button">유튜브 생중계 바로가기</button>
                     <button class="external-link-button">게더타운 입장하기</button>
                 </div>
