hotfix : chagne google form link

--- a/index.html
+++ b/index.html
@@ -65,13 +65,14 @@
             <div class="container">
                 <div class="header-tickers"></div>
                 <div class="header-buttons">
-                    <button class="external-link-button white-filled-button" onclick="location.href='https://forms.gle/jbULfA2pPecetCnj7';">게더타운 사전지원</button>
+                    <button class="external-link-button white-filled-button" onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSfeCyilqby92AhB3aIb2T_cxjxmsa9HRrFhi2iDCXbUmf7OBg/viewform?usp=sf_link';">게더타운 사전지원</button>
                     <button class="external-link-button white-filled-button" onclick="location.href='https://youtu.be/WZVkAaADeyI';">유튜브 라이브 바로가기</button>
                     <button class="external-link-button">게더타운 입장하기</button>
                 </div>
                 <div class="header-covid">
                     <p>COVID-19의 확산 방지 등을 위해 DE-FERENCE 2022의 오프라인 참석은 사전 초대된 분들만 가능하며</p>
                     <p>일반 참가자 분들은 온라인 유튜브와 게더타운을 통해 함께하실 수 있습니다.</p>
+                    <p>* 게더타운의 경우 사전참가 신청을 완료한 300명에 한하여 입장 가능합니다.</p>
                 </div>
                 <div class="header-youtube">
                     <div class="youtube-title">
