feat: add google drive links to download icons in timetable

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="header-buttons">
                     <button class="external-link-button white-filled-button" onclick="location.href='https://docs.google.com/forms/d/e/1FAIpQLSfeCyilqby92AhB3aIb2T_cxjxmsa9HRrFhi2iDCXbUmf7OBg/viewform?usp=sf_link';">게더타운 사전지원</button>
                     <button class="external-link-button white-filled-button" onclick="location.href='https://youtu.be/WZVkAaADeyI';">유튜브 라이브 바로가기</button>
-                    <button class="external-link-button">게더타운 입장하기</button>
+                    <button class="external-link-button white-filled-button" onclick="location.href='https://elfin-waste-380.notion.site/Deference-Gather-Town-ebeed7fc501b47dab307bfe3c7af98c1';">게더타운 입장하기</button>
                 </div>
                 <div class="header-covid">
                     <p>COVID-19의 확산 방지 등을 위해 DE-FERENCE 2022의 오프라인 참석은 사전 초대된 분들만 가능하며</p>
@@ -109,9 +109,10 @@
                       </tr>
                       <tr>
                         <th class="time-cell">11:10 - 11:40</th>
-                        <td class="title-cell">Keynote Speech</td>
+                        <td class="title-cell">Keynote Speech - a41</td>
                         <td class="button-cell">
-                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" onClick="$('#timetable_modal').modal('show');"></i>
+                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" 
+                                onclick="location.href='https://drive.google.com/file/d/1leCLxcIg-zRp_9KdCfkEdwnllbp6uOe4/view?usp=sharing';"></i>
                         </td>
                       </tr>
                     </tbody>
@@ -128,36 +129,38 @@
                         <th class="time-cell">11:40 - 12:10</th>
                         <td class="title-cell">이더리움 코어팀 | 이더리움2.0: 샤딩의 한계 및 확장성 솔루션 연구 방향</td>
                         <td class="button-cell">
-                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" onClick="$('#timetable_modal').modal('show');"></i>
+                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" 
+                                onclick="location.href='https://drive.google.com/file/d/1X4dZkkaObgNa8lPTM7BHCqzSaQrTkrAI/view?usp=sharing';"></i>
                         </td>
                       </tr>
                       <tr>
                         <th class="time-cell">12:10 - 12:40</th>
                         <td class="title-cell">양화대교 | 브리지 정보제공 및 평가/비교 플랫폼 제작</td>
                         <td class="button-cell">
-                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" onClick="$('#timetable_modal').modal('show');"></i>
+                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;"
+                                onclick="location.href='https://drive.google.com/file/d/1UqPTUTieF1c9hwXibUjGYQ3HaLwYHp_5/view?usp=sharing';"></i>
                         </td>
                       </tr>
                       <tr>
                         <th class="time-cell">12:40 - 13:10</th>
                         <td class="title-cell">토니토니 스타크 | 스타크웨어의 레이어2 확장성 솔루션과 응용사례 분석</td>
                         <td class="button-cell">
-                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" onClick="$('#timetable_modal').modal('show');"></i>
+                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" 
+                            onclick="location.href='https://drive.google.com/file/d/1_0ufpCjeLkHKUOYBufTx9NjOzGkFYITC/view?usp=sharing';"></i>
                         </td>
                       </tr>
                       <tr>
                         <th class="time-cell">13:10 - 13:40</th>
-                        <td class="title-cell">Keynote Speech</td>
+                        <td class="title-cell">Keynote Speech - Superblock</td>
                         <td class="button-cell">
-                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" onClick="$('#timetable_modal').modal('show');"></i>
+                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" 
+                            onclick="location.href='https://drive.google.com/file/d/1NK7slkHumbMEG0GuB38ixM7v-mt3BC3T/view?usp=sharing';"></i>
                         </td>
                       </tr>
                       <tr>
                         <th class="time-cell">13:40 - 14:10</th>
                         <td class="title-cell">Panel Discussion | 블록체인 트릴레마는 해결될 수 있는가? 불가능하다면 무엇을 우선시할 것인가?</td>
-                        <td class="button-cell">
-                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" onClick="$('#timetable_modal').modal('show');"></i>
-                        </td>
+                        <td class="button-cell"></td>
                       </tr>
                       <tr>
                         <th class="time-cell">14:10 - 15:00</th>
@@ -176,38 +179,40 @@
                     <tbody>
                       <tr>
                         <th class="time-cell">15:00 - 15:30</th>
-                        <td class="title-cell">Keynote Speech</td>
+                        <td class="title-cell">Keynote Speech - Hashed</td>
                         <td class="button-cell">
-                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" onClick="$('#timetable_modal').modal('show');"></i>
+                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" 
+                                onclick="location.href='https://drive.google.com/file/d/19lscgme8oVW6GOwx-rcojYsD_fu2_BNf/view?usp=sharing';"></i>
                         </td>
                       </tr>
                       <tr>
                         <th class="time-cell">15:30 - 16:00</th>
                         <td class="title-cell">궁극의 랜딩 프로토콜 | Bok Lee: a fixed-rate, auto-deleveraging lending protocol</td>
                         <td class="button-cell">
-                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" onClick="$('#timetable_modal').modal('show');"></i>
+                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" 
+                                onclick="location.href='https://drive.google.com/file/d/1MA5Dm12LI1Gn0Rs_pahzoz9rODxVDlBP/view?usp=sharing';"></i>
                         </td>
                       </tr>
                       <tr>
                         <th class="time-cell">16:00 - 16:30</th>
                         <td class="title-cell">OrderBank | AMM Dex 유동성을 활용한 탈중앙화된 지정가 거래</td>
                         <td class="button-cell">
-                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" onClick="$('#timetable_modal').modal('show');"></i>
+                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" 
+                                onclick="location.href='https://drive.google.com/file/d/1-eFvwT2O-Qb6udiOzXjEliEYm09DbyC7/view?usp=sharing';"></i>
                         </td>
                       </tr>
                       <tr>
                         <th class="time-cell">16:30 - 17:00</th>
                         <td class="title-cell">P2E 원정대 | P2E market analytics</td>
                         <td class="button-cell">
-                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" onClick="$('#timetable_modal').modal('show');"></i>
+                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" 
+                                onclick="location.href='https://drive.google.com/file/d/1Fvp3AdO8cpbhSCqdfJimrfezgPzTGBbr/view?usp=sharing';"></i>
                         </td>
                       </tr>
                       <tr>
                         <th class="time-cell">17:00 - 17:30</th>
                         <td class="title-cell">Panel Discussion | What is the next X2E?</td>
-                        <td class="button-cell">
-                            <i class="fa fa-download" style="color:#1a1d4c; width:1.8rem; height:1.8rem; cursor: pointer;" onClick="$('#timetable_modal').modal('show');"></i>
-                        </td>
+                        <td class="button-cell"></td>
                       </tr>
                     </tbody>
                   </table>
